//TODO package y import

@Getter
@Setter
@Builder

public class EvolucionPeriodo {
    private int mes;
    private int anio;
    private int cantidadDonaciones;
}