package ar.utn.donatrack.incentivos.models.categoriasdonante;

public class Transformador extends CategoriaDonante{

    public CategoriaDonante siguienteCategoria(){
        return null;
    }
}